2021-02-16  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.h: Reshuffle byte_mem pointer.

2021-02-16  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* common.h: Restore comment from 'cweave.w' (3.64c).

2021-02-11  Andreas Scherer  <https://ascherer.github.io>

	* texinputs/pdfctwimac.tex: Fix bug in color setter.

2021-02-08  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* common.c,
	* common.h,
	* common.w,
	* ctangle.c,
	* ctangle.w,
	* cweave.w: Don't repeat yourself.

2021-02-07  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch: Fix 'reading error';
	CWEB development has moved to another level.

2021-02-07  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* README,
	* comm-{amiga,bs,mac,os2,pc,ql,vms,w32}.ch,
	* comm-w2c.ch,
	* comm-w2c.h,
	* common.c,
	* common.h,
	* common.w,
	* ctang-{bs,pc,ql,vms,w32}.ch,
	* ctang-man.ch,
	* ctang-w2c.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-mini.ch,
	* ctwill-w2c.ch,
	* ctwill.bux,
	* cweav-{bs,pc,ql,vms,w32}.ch,
	* cweav-man.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* cweb.1,
	* cwebmac.tex,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* examples/wmerge.w,
	* po/{cweb,cweb-tl,web2c-help}.pot,
	* po/de/{cweb,cweb-tl,web2c-help}.po,
	* po/it/cweb.po,
	* system.bux: New CWEB 4.0 and CWEBbin 2021.

2020-07-30  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* ctang-w2c.ch,
	* ctwill-w2c.ch,
	* cweav-w2c.ch: Fix typographic inconsistency.

2020-07-15  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* comm-w2c.hch,
	* ctwill-mini.ch: Clearer exposition re external type definitions.

2020-07-08  Andreas Scherer  <https://ascherer.github.io>

	* cwebman-w2c.ch,
	* po/web2c-help.pot,
	* po/de/web2c-help.po: Add '-dN' to 'help' message.

2020-07-08  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch: Add special index entries for Kpathsea values.

2020-07-08  Andreas Scherer  <https://ascherer.github.io>
