@@ -1,5 +1,8 @@
 2021-02-16  Andreas Scherer  <https://ascherer.github.io>
 
+	* common.c,
+	* common.h,
+	* ctangle.c,
 	* comm-w2c.h: Reshuffle byte_mem pointer.
 
 2021-02-16  Andreas Scherer  <https://ascherer.github.io>
